--- a/index.html
+++ b/index.html
@@ -10,6 +10,50 @@
     <title>Shoes</title>
 </head>
 <body>
-    
+    <!-- Header -->
+    <header>
+        <nav class="menu">
+            <ul>
+                <li>
+                    <a href="#first">1</a>
+                </li>
+                <li>
+                    <a href="#second">2</a>
+                </li>
+                <li>
+                    <a href="#third">3</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <!-- Header Ending -->
+
+    <!-- Main -->
+    <main>
+    <div class="shoes-list">
+        <div class="container" id="first">
+            <div class="centered">
+                <img src="img/01.png" alt="scarpa-1">
+                <h2>il nostro modello di punta</h2>
+            </div>
+        </div>
+
+        <div class="container" id="second">
+            <div class="centered">
+                <img src="img/02.png" alt="scarpa-1">
+                <h2>il nostro modello di punta</h2>
+            </div>
+        </div>
+
+        <div class="container" id="third">
+            <div class="centered">
+                <img src="img/03.png" alt="scarpa-1">
+                <h2>il nostro modello di punta</h2>
+            </div>
+        </div>
+    </div>
+    </main>
+    <!-- Main Ending -->
+
 </body>
 </html>
