Minor Fixes, Project End

--- a/index.html
+++ b/index.html
@@ -12,46 +12,65 @@
 <body>
     <!-- Header -->
     <header>
+        <!-- Shoes Menu -->
         <nav class="menu">
             <ul>
+                <!-- 1 Button -->
                 <li>
                     <a href="#first">1</a>
                 </li>
+                <!-- 1 Button -->
+                
+                <!-- 2 Button -->
                 <li>
                     <a href="#second">2</a>
                 </li>
+                <!-- 2 Button -->
+
+                <!-- 3 Button -->
                 <li>
                     <a href="#third">3</a>
                 </li>
+                <!-- 3 Button -->
             </ul>
         </nav>
+        <!-- Shoes Menu Ending -->
     </header>
     <!-- Header Ending -->
 
     <!-- Main -->
     <main>
-    <div class="shoes-list">
-        <div class="container" id="first">
-            <div class="centered">
-                <img src="img/01.png" alt="scarpa-1">
-                <h2>il nostro modello di punta</h2>
+        <!-- Shoes list -->
+        <div class="shoes-list">
+            <!-- 1st Shoes -->
+            <div class="container" id="first">
+                <div class="centered">
+                    <img src="img/01.png" alt="scarpa-1">
+                    <h2>il nostro modello di punta</h2>
+                </div>
             </div>
-        </div>
+            <!-- 1st Shoes ending -->
 
-        <div class="container" id="second">
-            <div class="centered">
-                <img src="img/02.png" alt="scarpa-1">
-                <h2>il nostro modello di punta</h2>
+            <!-- 2nd Shoes -->
+            <div class="container" id="second">
+                <div class="centered">
+                    <img src="img/02.png" alt="scarpa-2">
+                    <h2>il nostro modello di punta</h2>
+                </div>
             </div>
-        </div>
+            <!-- 2nd Shoes Ending -->
 
-        <div class="container" id="third">
-            <div class="centered">
-                <img src="img/03.png" alt="scarpa-1">
-                <h2>il nostro modello di punta</h2>
+            <!-- 3rd Shoes -->
+            <div class="container" id="third">
+                <div class="centered">
+                    <img src="img/03.png" alt="scarpa-3">
+                    <h2>il nostro modello di punta</h2>
+                </div>
             </div>
+            <!-- 3rd Shoes Ending -->
+
         </div>
-    </div>
+        <!-- Shoes list ending -->
     </main>
     <!-- Main Ending -->
 
